[package]

name = "piston-texture"
version = "0.2.0"
authors = [
    "bvssvni <bvssvni@gmail.com>"
]
keywords = ["texture", "generic"]
description = "A library for texture conventions"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/texture.git"
homepage = "https://github.com/pistondevelopers/texture"

[lib]

name = "texture"
path = "src/lib.rs"

[dependencies]
image = "0.3.11"
