[package]

name = "piston-texture"
version = "0.2.2"
authors = [
    "bvssvni <bvssvni@gmail.com>"
]
keywords = ["texture", "generic", "piston"]
description = "A library for texture conventions"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/texture.git"
homepage = "https://github.com/pistondevelopers/texture"

[lib]

name = "texture"
path = "src/lib.rs"
