[package]

name = "piston-texture"
version = "0.8.0"
authors = [
    "bvssvni <bvssvni@gmail.com>"
]
keywords = ["texture", "generic", "piston"]
description = "A generic library for textures"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/texture.git"
homepage = "https://github.com/pistondevelopers/texture"

[lib]

name = "texture"
path = "src/lib.rs"
